--- a/style.css
+++ b/style.css
@@ -1,2 +1,27 @@
-h1 {
+* {
+box-sizing: border-box;
+}
+
+html {
+scroll-behavior: smooth;
+}
+
+body {
+min-height: 100vh;
+margin: 0px;
+padding: 0px;
+display: flex;
+flex-direction: column;
+justify-content: space-between;  
+}
+
+.container {
+max-width: 1440px;
+margin: 0 auto;  
+}
+
+.nav-list {
+display: flex;
+justify-content: flex-end;
+align-items: center;  
 }
