--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+@font-face {
+font-family: Poppins;
+src: url("project/fonts/poppins/Poppins-Thin.ttf")
+font-weight: 100;  
+}
+
+@font-face {
+font-family: Poppins;
+src: url("project/fonts/poppins/Poppins-Regular.ttf")
+font-weight: 300;  
+}
+  
 * {
 box-sizing: border-box;
 }
@@ -18,6 +30,15 @@ justify-content: space-between;
 .container {
 max-width: 1440px;
 margin: 0 auto;  
+}
+
+.main-container {
+display: flex;
+flex-wrap: wrap;  
+}
+
+.section {
+width: 50%;
 }
 
 .nav-list {
