--- a/style.css
+++ b/style.css
@@ -1,48 +1,67 @@
 @font-face {
-font-family: Poppins;
-src: url("project/fonts/poppins/Poppins-Thin.ttf")
-font-weight: 100;  
+  font-family: Poppins;
+  src: url("project/fonts/poppins/Poppins-Thin.ttf")
+  font-weight: 100;  
 }
 
 @font-face {
-font-family: Poppins;
-src: url("project/fonts/poppins/Poppins-Regular.ttf")
-font-weight: 300;  
+  font-family: Poppins;
+  src: url("project/fonts/poppins/Poppins-Regular.ttf")
+  font-weight: 300;  
+}
+
+@media (max-width: 768px) {
+  .section {
+    width: 100%;
+  }
 }
   
 * {
-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
-scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body {
-min-height: 100vh;
-margin: 0px;
-padding: 0px;
-display: flex;
-flex-direction: column;
-justify-content: space-between;  
+  min-height: 100vh;
+  margin: 0px;
+  padding: 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;  
 }
 
 .container {
-max-width: 1440px;
-margin: 0 auto;  
+  max-width: 1440px;
+  margin: 0 auto;  
 }
 
 .main-container {
-display: flex;
-flex-wrap: wrap;  
+  display: flex;
+  flex-wrap: wrap;  
 }
 
 .section {
-width: 50%;
+  width: 50%;
 }
 
 .nav-list {
-display: flex;
-justify-content: flex-end;
-align-items: center;  
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  list-style: none;
+}
+
+.nav-link {
+  transition: .3s;
+  padding: 0 20px;
+  line-height: 50px;
+}
+
+.section-item a {
+  color: #F6940F;
+  text-decoration: none;
+  transition: color 0.5s;
 }
